Update for UKS .32
Update for new life support mechanics in USI-LS, etc.

--- a/UKS-KPBS_HabitatMk1.cfg
+++ b/UKS-KPBS_HabitatMk1.cfg
@@ -1,66 +1,11 @@
 //change habitat Mk1 to work like a double-capacity inflatable hab module
-//LB 9-26-15
+//1-23-16
 
-@PART[KKAOSS_Habitat_MK1_g]:NEEDS[KolonyTools]:AFTER[PlanetaryBaseInc]
+@PART[KKAOSS_Habitat_MK1_g]:NEEDS[KolonyTools]:FINAL
 {
 	MODULE
 	{
-		name = ModuleResourceConverter
-		ConverterName = Habitat
-		tag = Habitat
-		StartActionName = Start Habitat
-		StopActionName = Stop Habitat
-		INPUT_RESOURCE
-		{
-			ResourceName = Organics
-			Ratio =  0.0002
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Supplies
-			Ratio = 0.0002
-			DumpExcess = False
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 6
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.00002
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.00002
-			DumpExcess = true
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 200
-		}
-	}
-	MODULE
-	{
 		name = ModuleLogisticsConsumer
-	}
-	MODULE
-	{
-		name = MKSModule
-		workSpace = 0
-		livingSpace = 3
-		CrewBonus = .5
-		MaxEfficiency = 1
-	}
-	RESOURCE
-	{
-		name = Machinery
-		amount = 200
-		maxAmount = 200
-		isTweakable = True
 	}
 	@RESOURCE[Supplies]
 	{
@@ -71,11 +16,48 @@
 	{
 		@maxAmount = 400
 	}
-	RESOURCE
+	MODULE
 	{
-		name = Organics
-		amount = 0
-		maxAmount = 400
-		isTweakable = True
+		name = USI_ModuleFieldRepair
+	}
+	MODULE
+	{
+		name = ModuleLifeSupport
+	}
+	
+    RESOURCE
+    {
+        name = ReplacementParts
+        amount = 1550
+        maxAmount = 1550
+    }
+	
+	MODULE
+	{
+		name = ModuleHabitation
+		KerbalMonths = 7.5
+		HabMultiplier = 0
+	}	
+	
+	MODULE
+	{
+		name = ModuleLifeSupportRecycler
+		CrewCapacity = 4
+		RecyclePercent = .25
+		ConverterName = Life Support
+		tag = Life Support
+		StartActionName = Start Life Support
+		StopActionName = Stop Life Support
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1
+		}
+		INPUT_RESOURCE
+		{
+			ResourceName = ReplacementParts
+			Ratio = 0.00001
+		}	
 	}
 }
