--- a/UKS-KPBS_LargeGreenhouse.cfg
+++ b/UKS-KPBS_LargeGreenhouse.cfg
@@ -1,101 +1,16 @@
 //add aeroponics functionality to the greenhouse
-//LB 9-26-15
+//requires and stores only 1500 machinery due to greater mass
+//LB 1-22-16
 
-@PART[KKAOSS_Greenhouse_g]:NEEDS[KolonyTools]:AFTER[PlanetaryBaseInc]
+@PART[KKAOSS_Greenhouse_g]:NEEDS[KolonyTools]:FINAL
 {
 	!MODULE[PlanetaryGreenhouse]{}
+	!MODULE[ModuleScienceExperiment]{}
+	!MODULE[ModuleScienceContainer]{}
 	MODULE
 	{
 		name = USI_ModuleFieldRepair
 	}
-	MODULE
-	{
-		name = ModuleResourceConverter
-		tag = Greenhouse
-		ConverterName = Greenhouse
-		StartActionName = Start Greenhouse
-		StopActionName = Stop Greenhouse
-		INPUT_RESOURCE
-		{
-			ResourceName = Mulch
-			Ratio =  0.00010
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Organics
-			Ratio = 0.000090
-			DumpExcess = False
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 24
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.000002
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.000002
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 2000
-		}
-	}
-	
-	MODULE
-	{
-		name = ModuleResourceConverter
-		tag = Agroponics
-		ConverterName = Agroponics
-		StartActionName = Start Agroponics
-		StopActionName = Stop Agroponics
-		INPUT_RESOURCE
-		{
-			ResourceName = Mulch
-			Ratio =  0.00010
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio =  0.0000050
-
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Organics
-			Ratio = 0.000105
-			DumpExcess = False
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 24
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.000002
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.000002
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 2000
-		}
-	}
-
-
-	
 	MODULE
 	{
 		name = ModuleResourceConverter
@@ -106,53 +21,58 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Water
-			Ratio = 0.0010
+			Ratio = 0.00375
 		}
 		INPUT_RESOURCE
 		{
 			ResourceName = Substrate
-			Ratio = 0.0010
+			Ratio = 0.00375
+		}
+		INPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.000025
 		}
 		OUTPUT_RESOURCE
 		{
-			ResourceName = Organics
-			Ratio = 0.00010
+			ResourceName = Supplies
+			Ratio = 0.000375
 			DumpExcess = False
 		}
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 24
+			Ratio = 12
 		}
 		INPUT_RESOURCE
 		{
 			ResourceName = Machinery
-			Ratio = 0.000002
+			Ratio = 0.000001
 		}
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Recyclables
-			Ratio = 0.000002
+			Ratio = 0.000001
 		}
 		REQUIRED_RESOURCE
 		{
 			ResourceName = Machinery
-			Ratio = 2000
+			Ratio = 1500
 		}
 	}
 	
 	RESOURCE
 	{
 		name = Machinery
-		amount = 200
-		maxAmount = 2000
+		amount = 150
+		maxAmount = 1500
 		isTweakable = True
 	}
 	RESOURCE
 	{
 		name = Recyclables
 		amount = 0
-		maxAmount = 2000
+		maxAmount = 1500
 		isTweakable = True
 	}	
 
@@ -164,20 +84,8 @@
 		isTweakable = false
 	}
 	!RESOURCE[Supplies]{}
-	@RESOURCE[Fertilizer]{
-		@amount = 0
-		@maxAmount = 200
-	}
-	@RESOURCE[Mulch]{
-		@amount = 0
-		@maxAmount = 200
-	}
-	RESOURCE{
-		name = Organics
-		amount = 0
-		maxAmount = 200
-		isTweakable = True
-	}
+	!RESOURCE[Fertilizer]{}
+	!RESOURCE[Mulch]{}
 	MODULE
 	{
 		name = ModuleLogisticsConsumer
@@ -187,11 +95,52 @@
 		name = MKSModule
 		workSpace = 2
 		livingSpace = 0
-		efficiencyPart = MKS_AgModule,1,MKV_AgModule,1,USILS_Greenhouse_LG,2,KKAOSS_LS_container_algae,1
+		efficiencyPart = MKV_AgModule,2,USILS_Greenhouse_LG,4,KKAOSS_LS_container_greenhouse,2
 	}
 	MODULE
 	{
 		name = ExWorkshop
 		ProductivityFactor  = 1
 	}
+	MODULE
+	{
+		name = ModuleLifeSupport
+	}
+	
+    RESOURCE
+    {
+        name = ReplacementParts
+        amount = 200
+        maxAmount = 200
+    }
+	
+	MODULE
+	{
+		name = ModuleHabitation
+		KerbalMonths = 0
+		HabMultiplier = 1.25
+	}	
+
+	MODULE
+	{
+		name = ModuleLifeSupportRecycler
+		CrewCapacity = 5
+		RecyclePercent = .50
+		ConverterName = Life Support
+		tag = Life Support
+		StartActionName = Start Life Support
+		StopActionName = Stop Life Support
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1
+		}
+		INPUT_RESOURCE
+		{
+			ResourceName = ReplacementParts
+			Ratio = 0.00001
+		}	
+	}
+
 }
