--- a/UKS-KPBS_ScienceLab.cfg
+++ b/UKS-KPBS_ScienceLab.cfg
@@ -1,49 +1,22 @@
-//add enrichment from PDU
-//LB 9-25-16
+//function as a Pioneer Module
+//1-22-16
 
 @PART[KKAOSS_Science_g]:NEEDS[KolonyTools]
 {
+	MODULE
+	{
+		name = ExSurveyStation
+	}
 	MODULE
 	{
 		name = USI_ModuleFieldRepair
 	}
 	RESOURCE
 	{
-		name = Machinery
-		amount = 200
-		maxAmount = 2000
-		isTweakable = True
-	}
-	RESOURCE
-	{
-		name = Recyclables
-		amount = 0
-		maxAmount = 2000
-		isTweakable = True
-	}	
-
-	RESOURCE
-	{
 		name = ElectricCharge
-		amount = 5000
-		maxAmount = 5000
+		amount = 1000
+		maxAmount = 1000
 		isTweakable = false
-	}
-
-	RESOURCE
-	{
-		name = EnrichedUranium
-		amount = 0
-		maxAmount = 500
-		isTweakable = True
-	}
-	
-	RESOURCE
-	{
-		name = DepletedUranium
-		amount = 0
-		maxAmount = 500
-		isTweakable = True
 	}
 	MODULE
 	{
@@ -51,99 +24,50 @@
 	}
 	MODULE
 	{
-		name = MKSModule
-		workSpace = 1
-		livingSpace = 0
+		name = ModuleResourceDistributor
+		passable = true
+	}
+	MODULE
+	{
+		name = ModuleLifeSupport
+	}
+    RESOURCE
+    {
+        name = ReplacementParts
+        amount = 200
+        maxAmount = 200
+    }
+	MODULE
+	{
+		name = ModuleHabitation
+		KerbalMonths = 0
+		HabMultiplier = 0
+	}	
+	
+	MODULE
+	{
+		name = ModuleLifeSupportRecycler
+		CrewCapacity = 5
+		RecyclePercent = .75
+		ConverterName = Life Support
+		tag = Life Support
+		StartActionName = Start Life Support
+		StopActionName = Stop Life Support
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1
+		}
+		INPUT_RESOURCE
+		{
+			ResourceName = ReplacementParts
+			Ratio = 0.00001
+		}	
 	}
 	MODULE
 	{
 		name = ExWorkshop
 		ProductivityFactor  = 1
-	}
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Centrifuge
-		StartActionName = Start Centrifuge
-		StopActionName = Stop Centrifuge
-		
-		INPUT_RESOURCE
-		{
-			ResourceName = Uraninite
-			Ratio = 0.00085
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 6
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.000001
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = EnrichedUranium
-			Ratio = 0.00085
-			DumpExcess = False
-			FlowMode = STAGE_PRIORITY_FLOW			
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.000001
-			DumpExcess = true
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 2000
-		}		
-	}
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Breeder
-		StartActionName = Start Breeder
-		StopActionName = Stop Breeder
-		
-		INPUT_RESOURCE
-		{
-			ResourceName = DepletedUranium
-			Ratio = 0.00085
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 18
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.000001
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = EnrichedUranium
-			Ratio = 0.000425
-			DumpExcess = False
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.000001
-			DumpExcess = true
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 2000
-		}		
 	}
 }
