--- a/UKS-KPBS_StorageLarge.cfg
+++ b/UKS-KPBS_StorageLarge.cfg
@@ -1,5 +1,5 @@
 //UKS resources in the KPBS modular wedge-style tank (large)
-//LB 9-26-15
+//1-23-16
 
 PART
 {
@@ -44,23 +44,23 @@ PART
 	MODULE
 	{
 		name = FStextureSwitch2
-		textureNames = PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big
+		textureNames = PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_big
 		objectNames = Pack_002 //CHANGE THIS???
-		textureDisplayNames = LifeSupport;RawMaterials;RefinedGoods;Equipment;SpecializedParts;NuclearFuels;Commodities
+		textureDisplayNames = LifeSupport;RawMaterials;RefinedGoods;Equipment;NuclearFuels;Commodities
 		useFuelSwitchModule = true
-		fuelTankSetups = 0;1;2;3;4;5;6
+		fuelTankSetups = 0;1;2;3;4;5
 		repaintableEVA = true
 	}
 
 	MODULE
 	{
 		name = FSfuelSwitch
-		resourceNames = Supplies,Mulch,Organics,Fertilizer;MetallicOre,Substrate,Minerals,Water;Chemicals,Metals,Polymers;Machinery,Recyclables,RocketParts;SpecializedParts;Uraninite,EnrichedUranium,DepletedUranium;RareMetals,ExoticMinerals
-		resourceAmounts = 500,500,500,500;500,500,500,500;667,667,667;667,667,133;2000;667,667,667;1000,1000
-		initialResourceAmounts = 0,0,0,0;0,0,0,0;0,0,0;0,0,0;0;0,0,0;0,0
-		tankCost = 11500;1430;25506;15407;64000;577422;300000
+		resourceNames = Supplies,Mulch,Fertilizer;MetallicOre,Substrate,Minerals,Water;Chemicals,Metals,Polymers;Machinery,Recyclables,MaterialKits,SpecializedParts;Uraninite,EnrichedUranium,DepletedFuels;RareMetals,ExoticMinerals
+		resourceAmounts = 667,667,667;500,500,500,500;667,667,667;500,500,500,500;667,667,667;1000,1000
+		initialResourceAmounts = 0,0,0;0,0,0,0;0,0,0;0,0,0,0;0,0,0;0,0
+		tankCost = 15007;1430;25506;28400;577422;300000
 		basePartMass = 0.24
-		tankMass = 0;0;0;0;0;0;0
+		tankMass = 0;0;0;0;0;0
 		hasGUI = false
 	}
 
