--- a/UKS-KPBS_StorageSmall.cfg
+++ b/UKS-KPBS_StorageSmall.cfg
@@ -1,6 +1,5 @@
 //UKS resources in the KPBS modular wedge-style tank (small)
-//LB 9-26-15
-
+//1-23-16
 PART
 {
 	name = UKS_KPBS_Storage_Small
@@ -44,23 +43,23 @@ PART
 	MODULE
 	{
 		name = FStextureSwitch2
-		textureNames = PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small
+		textureNames = PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small
 		objectNames = Pack_002 //CHANGE THIS???
-		textureDisplayNames = LifeSupport;RawMaterials;RefinedGoods;Equipment;SpecializedParts;NuclearFuels;Commodities
+		textureDisplayNames = LifeSupport;RawMaterials;RefinedGoods;Equipment;NuclearFuels;Commodities
 		useFuelSwitchModule = true
-		fuelTankSetups = 0;1;2;3;4;5;6
+		fuelTankSetups = 0;1;2;3;4;5
 		repaintableEVA = true
 	}
 
 	MODULE
 	{
 		name = FSfuelSwitch
-		resourceNames = Supplies,Mulch,Organics,Fertilizer;MetallicOre,Substrate,Minerals,Water;Chemicals,Metals,Polymers;Machinery,Recyclables,RocketParts;SpecializedParts;Uraninite,EnrichedUranium,DepletedUranium;RareMetals,ExoticMinerals
-		resourceAmounts = 250,250,250,250;250,250,250,250;333,333,333;333,333,67;1000;333,333,333;500,500
-		initialResourceAmounts = 0,0,0,0;0,0,0,0;0,0,0;0,0,0;0;0,0,0;0,0
-		tankCost = 5750;715;12734;7693;32000;288278;150000
+		resourceNames = Supplies,Mulch,Fertilizer;MetallicOre,Substrate,Minerals,Water;Chemicals,Metals,Polymers;Machinery,Recyclables,MaterialKits,SpecializedParts;Uraninite,EnrichedUranium,DepletedFuel;RareMetals,ExoticMinerals
+		resourceAmounts = 333,333,333;250,250,250,250;333,333,333;250,250,250,250;333,333,333;500,500
+		initialResourceAmounts = 0,0,0;0,0,0,0;0,0,0;0,0,0,0;0,0,0;0,0
+		tankCost = 7492;715;12734;14200;288278;150000
 		basePartMass = 0.12
-		tankMass = 0;0;0;0;0;0;0
+		tankMass = 0;0;0;0;0;0
 		hasGUI = false
 	}
 
