--- a/UKS-KPBS_HabitatMk2.cfg
+++ b/UKS-KPBS_HabitatMk2.cfg
@@ -1,5 +1,5 @@
 //add kerbitat functionality
-//LB 9-26-15
+//LB 1-22-16
 
 @PART[KKAOSS_Habitat_MK2_g]:NEEDS[KolonyTools]:AFTER[PlanetaryBaseInc]
 {
@@ -7,91 +7,55 @@
 	{
 		name = USI_ModuleFieldRepair
 	}
-
-	MODULE
-	{
-		name = ModuleResourceConverter
-		tag = Habitat
-		ConverterName = Habitat
-		StartActionName = Start Habitat
-		StopActionName = Stop Habitat
-		INPUT_RESOURCE
-		{
-			ResourceName = Organics
-			Ratio = 0.0002
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Supplies
-			Ratio =  0.0002
-			DumpExcess = False
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 12
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.000002
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.000002
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 2000
-		}
-	}
-	RESOURCE
-	{
-		name = Machinery
-		amount = 200
-		maxAmount = 2000
-		isTweakable = True
-	}
-	RESOURCE
-	{
-		name = Recyclables
-		amount = 0
-		maxAmount = 2000
-		isTweakable = True
-	}		
-	
 	@RESOURCE[ElectricCharge]
 	{
-		@amount = 10000
-		@maxAmount = 10000
+		@amount = 1000
+		@maxAmount = 1000
 	}
-	@RESOURCE[Supplies]
-	{
-		@amount = 0
-	}
-	@RESOURCE[Mulch]
-	{
-		@maxAmount = 200
-	}
-	RESOURCE
-	{
-		name = Organics
-		amount = 0
-		maxAmount = 200
-		isTweakable = True
-	}
+	!RESOURCE[Supplies]{}
+	!RESOURCE[Mulch]{}
 	MODULE
 	{
 		name = ModuleLogisticsConsumer
 	}
 	MODULE
 	{
-		name = MKSModule
-		workSpace = 2
-		livingSpace = 4
-		efficiencyPart = MKV_HabModule,1,MKS_HabDome,1,KKAOSS_Habitat_MK1_g,2
+		name = ModuleLifeSupport
+	}
+    RESOURCE
+    {
+        name = ReplacementParts
+        amount = 200
+        maxAmount = 200
+    }
+	
+	MODULE
+	{
+		name = ModuleHabitation
+		KerbalMonths = 0
+		HabMultiplier = 3
+	}	
+	
+	MODULE
+	{
+		name = ModuleLifeSupportRecycler
+		CrewCapacity = 5
+		RecyclePercent = .50
+		ConverterName = Life Support
+		tag = Life Support
+		StartActionName = Start Life Support
+		StopActionName = Stop Life Support
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1
+		}
+		INPUT_RESOURCE
+		{
+			ResourceName = ReplacementParts
+			Ratio = 0.00001
+		}	
 	}
 	MODULE
 	{
