Revised everything again
Revised and simplified

--- a/UKS-KPBS_HabitatMk1.cfg
+++ b/UKS-KPBS_HabitatMk1.cfg
@@ -1,49 +1,28 @@
-//change habitat Mk1 to work like a double-capacity inflatable hab module
-//1-23-16
-
-@PART[KKAOSS_Habitat_MK1_g]:NEEDS[KolonyTools]:FINAL
+@PART[KKAOSS_Habitat_MK1_g]:NEEDS[USILifeSupport]:FINAL
 {
-	MODULE
-	{
-		name = ModuleLogisticsConsumer
-	}
-	@RESOURCE[Supplies]
-	{
-		@amount = 0
-		@maxAmount = 400
-	}	
-	@RESOURCE[Mulch]
-	{
-		@maxAmount = 400
-	}
-	MODULE
-	{
-		name = USI_ModuleFieldRepair
-	}
 	MODULE
 	{
 		name = ModuleLifeSupport
 	}
 	
-    RESOURCE
-    {
-        name = ReplacementParts
-        amount = 1550
-        maxAmount = 1550
-    }
-	
+	RESOURCE
+	{
+		name = ReplacementParts
+		amount = 1150 //100 * crew capacity + 100 * Kerbal-Months
+		maxAmount = 1150
+	}
+
 	MODULE
 	{
 		name = ModuleHabitation
-		KerbalMonths = 7.5
-		HabMultiplier = 0
-	}	
+		KerbalMonths = 8.5 //mass * 5
+	}
 	
 	MODULE
 	{
 		name = ModuleLifeSupportRecycler
-		CrewCapacity = 4
-		RecyclePercent = .25
+		CrewCapacity = 5
+		RecyclePercent = .33
 		ConverterName = Life Support
 		tag = Life Support
 		StartActionName = Start Life Support
@@ -52,12 +31,23 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 1
+			Ratio = 1 //.2 * crew capacity
 		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ReplacementParts
-			Ratio = 0.00001
-		}	
+		//INPUT_RESOURCE
+		//{
+		//	ResourceName = ReplacementParts
+		//	Ratio = 0.00001 //.000002 * crew capacity
+		//}	
+	}
+
+	MODULE
+	{
+		name = USI_ModuleFieldRepair
+	}
+
+	MODULE
+	{
+		name = ModulePowerCoupler
+		PowerCouplingRange = 500
 	}
 }
