--- a/UKS-KPBS_HabitatMk2.cfg
+++ b/UKS-KPBS_HabitatMk2.cfg
@@ -1,50 +1,32 @@
-//add kerbitat functionality
-//LB 1-22-16
-
-@PART[KKAOSS_Habitat_MK2_g]:NEEDS[KolonyTools]:AFTER[PlanetaryBaseInc]
+@PART[KKAOSS_Habitat_MK2_g]:NEEDS[USILifeSupport]:FINAL
 {
-	MODULE
-	{
-		name = USI_ModuleFieldRepair
-	}
-	@RESOURCE[ElectricCharge]
-	{
-		@amount = 1000
-		@maxAmount = 1000
-	}
-	!RESOURCE[Supplies]{}
-	!RESOURCE[Mulch]{}
-	MODULE
-	{
-		name = ModuleLogisticsConsumer
-	}
 	MODULE
 	{
 		name = ModuleLifeSupport
 	}
-    RESOURCE
-    {
-        name = ReplacementParts
-        amount = 200
-        maxAmount = 200
-    }
 	
+	RESOURCE
+	{
+		name = ReplacementParts
+		amount = 1700 //100 * crew capacity + 100 * Kerbal-Months
+		maxAmount = 1700
+	}
+
 	MODULE
 	{
 		name = ModuleHabitation
-		KerbalMonths = 0
-		HabMultiplier = 3
-	}	
+		KerbalMonths = 13 //mass * 5
+	}
 	
 	MODULE
 	{
 		name = ModuleLifeSupportRecycler
 		CrewCapacity = 5
-		RecyclePercent = .50
-		ConverterName = Life Support
-		tag = Life Support
-		StartActionName = Start Life Support
-		StopActionName = Stop Life Support
+		RecyclePercent = .90
+		ConverterName = Water Purifier
+		tag = Purifier
+		StartActionName = Start Water Purifier
+		StopActionName = Stop Water Purifier
 
 		INPUT_RESOURCE
 		{
@@ -53,13 +35,19 @@
 		}
 		INPUT_RESOURCE
 		{
-			ResourceName = ReplacementParts
-			Ratio = 0.00001
-		}	
+			ResourceName = Water
+			Ratio = 0.005
+		}		
 	}
+
 	MODULE
 	{
-		name = ExWorkshop
-		ProductivityFactor  = 1
+		name = USI_ModuleFieldRepair
+	}
+
+	MODULE
+	{
+		name = ModulePowerCoupler
+		PowerCouplingRange = 500
 	}
 }
