--- a/UKS-KPBS_LargeGreenhouse.cfg
+++ b/UKS-KPBS_LargeGreenhouse.cfg
@@ -1,32 +1,55 @@
-//add aeroponics functionality to the greenhouse
-//requires and stores only 1500 machinery due to greater mass
-//LB 1-22-16
-
-@PART[KKAOSS_Greenhouse_g]:NEEDS[KolonyTools]:FINAL
+@PART[KKAOSS_Greenhouse_g]:NEEDS[USILifeSupport]:FINAL
 {
 	!MODULE[PlanetaryGreenhouse]{}
 	!MODULE[ModuleScienceExperiment]{}
 	!MODULE[ModuleScienceContainer]{}
-	MODULE
-	{
-		name = USI_ModuleFieldRepair
-	}
+
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = Cultivator
-		tag = Cultivator
-		StartActionName = Start Cultivator
-		StopActionName = Stop Cultivator
+		ConverterName = Agroponics
+		tag = Agroponics
+		StartActionName = Start Agroponics
+		StopActionName = Stop Agroponics
 		INPUT_RESOURCE
 		{
-			ResourceName = Water
-			Ratio = 0.00375
+			ResourceName = Mulch
+			Ratio =  0.0045
 		}
 		INPUT_RESOURCE
 		{
+			ResourceName = Fertilizer
+			Ratio =  0.0006
+		}
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Supplies
+			Ratio = 0.0051
+			DumpExcess = False
+		}
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 20
+		}
+	}	
+
+	MODULE
+	{
+		 name = ModuleResourceConverter
+		 ConverterName = Cultivator
+		 tag = Cultivator
+		 StartActionName = Start Cultivator
+		 StopActionName = Stop Cultivator
+		INPUT_RESOURCE
+		{
 			ResourceName = Substrate
-			Ratio = 0.00375
+			Ratio = 0.005
+		}
+		INPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.005
 		}
 		INPUT_RESOURCE
 		{
@@ -36,7 +59,7 @@
 		OUTPUT_RESOURCE
 		{
 			ResourceName = Supplies
-			Ratio = 0.000375
+			Ratio = 0.00250
 			DumpExcess = False
 		}
 		INPUT_RESOURCE
@@ -44,103 +67,11 @@
 			ResourceName = ElectricCharge
 			Ratio = 12
 		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.000001
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.000001
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 1500
-		}
-	}
-	
-	RESOURCE
-	{
-		name = Machinery
-		amount = 150
-		maxAmount = 1500
-		isTweakable = True
-	}
-	RESOURCE
-	{
-		name = Recyclables
-		amount = 0
-		maxAmount = 1500
-		isTweakable = True
-	}	
-
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 10000
-		maxAmount = 10000
-		isTweakable = false
-	}
-	!RESOURCE[Supplies]{}
-	!RESOURCE[Fertilizer]{}
-	!RESOURCE[Mulch]{}
-	MODULE
-	{
-		name = ModuleLogisticsConsumer
-	}	
-	MODULE
-	{
-		name = MKSModule
-		workSpace = 2
-		livingSpace = 0
-		efficiencyPart = MKV_AgModule,2,USILS_Greenhouse_LG,4,KKAOSS_LS_container_greenhouse,2
-	}
-	MODULE
-	{
-		name = ExWorkshop
-		ProductivityFactor  = 1
-	}
-	MODULE
-	{
-		name = ModuleLifeSupport
-	}
-	
-    RESOURCE
-    {
-        name = ReplacementParts
-        amount = 200
-        maxAmount = 200
-    }
-	
-	MODULE
-	{
-		name = ModuleHabitation
-		KerbalMonths = 0
-		HabMultiplier = 1.25
-	}	
-
-	MODULE
-	{
-		name = ModuleLifeSupportRecycler
-		CrewCapacity = 5
-		RecyclePercent = .50
-		ConverterName = Life Support
-		tag = Life Support
-		StartActionName = Start Life Support
-		StopActionName = Stop Life Support
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 1
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ReplacementParts
-			Ratio = 0.00001
-		}	
 	}
 
+	MODULE
+	{
+		name = ModulePowerCoupler
+		PowerCouplingRange = 500
+	}
 }
