--- a/UKS-KPBS_ScienceLab.cfg
+++ b/UKS-KPBS_ScienceLab.cfg
@@ -1,54 +1,22 @@
-//function as a Pioneer Module
-//1-22-16
-
-@PART[KKAOSS_Science_g]:NEEDS[KolonyTools]
+@PART[KKAOSS_Science_g]:NEEDS[USILifeSupport]:FINAL
 {
-	MODULE
-	{
-		name = ExSurveyStation
-	}
-	MODULE
-	{
-		name = USI_ModuleFieldRepair
-	}
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 1000
-		maxAmount = 1000
-		isTweakable = false
-	}
-	MODULE
-	{
-		name = ModuleLogisticsConsumer
-	}
-	MODULE
-	{
-		name = ModuleResourceDistributor
-		passable = true
-	}
 	MODULE
 	{
 		name = ModuleLifeSupport
 	}
-    RESOURCE
-    {
-        name = ReplacementParts
-        amount = 200
-        maxAmount = 200
-    }
-	MODULE
+	
+	RESOURCE
 	{
-		name = ModuleHabitation
-		KerbalMonths = 0
-		HabMultiplier = 0
-	}	
+		name = ReplacementParts
+		amount = 200 //100 * crew capacity + 100 * Kerbal-Months
+		maxAmount = 200
+	}
 	
 	MODULE
 	{
 		name = ModuleLifeSupportRecycler
 		CrewCapacity = 5
-		RecyclePercent = .75
+		RecyclePercent = .71 //mass / crew capacity; maximum .75
 		ConverterName = Life Support
 		tag = Life Support
 		StartActionName = Start Life Support
@@ -57,17 +25,23 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 1
+			Ratio = 1 //.2 * crew capacity
 		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ReplacementParts
-			Ratio = 0.00001
-		}	
+		//INPUT_RESOURCE
+		//{
+		//	ResourceName = ReplacementParts
+		//	Ratio = 0.00001 //.000002 * crew capacity
+		//}	
 	}
+
 	MODULE
 	{
-		name = ExWorkshop
-		ProductivityFactor  = 1
+		name = USI_ModuleFieldRepair
+	}
+
+	MODULE
+	{
+		name = ModulePowerCoupler
+		PowerCouplingRange = 500
 	}
 }
