--- a/UKS-KPBS_SmallGreenhouse.cfg
+++ b/UKS-KPBS_SmallGreenhouse.cfg
@@ -1,16 +1,13 @@
-//Replace existing functionality with UKS agriculture module
-//1-23-16
-
 @PART[KKAOSS_LS_container_greenhouse]:NEEDS[USILifeSupport]:FINAL
 {
-	@description = This mini-greenhouse can be used to grow supplies from mulch and fertilizer. It will also enhance the efficiency of the full-sized K&K greenhouse.
-	@TechRequired = advConstruction
-	@entryCost = 5200
-	@cost = 12260
-	@mass = .75
-    !MODULE[ModuleResourceConverter]{}
-    !MODULE[ModuleScienceExperiment]{}
-    !MODULE[ModuleScienceContainer]{}
+	@description = The Nom-O-Matic offers the latest in automated gardening and food generation.  Simply toss in mulch (not included!) and harvest bland but mildly nutritions noms. Now available in the K&K modular “wedge” form-factor.
+	@TechRequired = survivability
+	@entryCost = 1000
+	@cost = 100
+    	!MODULE[ModuleResourceConverter]{}
+    	!MODULE[ModuleScienceExperiment]{}
+    	!MODULE[ModuleScienceContainer]{}
+
 	MODULE
 	{
 		name = ModuleResourceConverter
@@ -37,92 +34,28 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 3
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.00001
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.00001
-			DumpExcess = true
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 200
+			Ratio = 5
 		}
 	}	
-	MODULE
-	{
-		name = ModuleLogisticsConsumer
-	}	
-	
-	MODULE
-	{
-		name = MKSModule
-		workSpace = 1
-		livingSpace = 0
-		CrewBonus = 1
-		MaxEfficiency = 1
-		PrimarySkill = Scientist
-		SecondarySkill = Engineer		
-	}
-	RESOURCE
-	{
-		name = Machinery
-		amount = 200
-		maxAmount = 200
-		isTweakable = True
-	}
     	@RESOURCE[Mulch]
 	{
 		@amount = 0
-		@maxAmount = 200
+		@maxAmount = 100
 	}
 	@RESOURCE[Supplies]
 	{
-		name = Supplies
-		@amount = 0
-		@maxAmount = 200
+		@amount = 100
+		@maxAmount = 100
 	}
 	RESOURCE
 	{
 		name = Fertilizer
-		amount = 20
-		maxAmount = 200
-		isTweakable = True
-	}
-	MODULE
-	{
-		name = USI_ModuleFieldRepair
-	}
-	MODULE
-	{
-		name = ModuleLifeSupportRecycler
-		CrewCapacity = 2
-		RecyclePercent = .25
-		ConverterName = Life Support
-		tag = Life Support
-		StartActionName = Start Life Support
-		StopActionName = Stop Life Support
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 1
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ReplacementParts
-			Ratio = 0.00001
-		}	
+		amount = 100
+		maxAmount = 100
 	}
 
 @PART[KKAOSS_LS_container_greenhouse]:NEEDS[CommunityTechTree]:FINAL
 {
- 	@TechRequired = shortTermHabitation
+ 	@TechRequired = recycling
 
 }
