--- a/UKS-KPBS_StorageSmall.cfg
+++ b/UKS-KPBS_StorageSmall.cfg
@@ -1,5 +1,3 @@
-//UKS resources in the KPBS modular wedge-style tank (small)
-//1-23-16
 PART
 {
 	name = UKS_KPBS_Storage_Small
@@ -23,7 +21,7 @@ PART
 	entryCost = 5200
 
 	cost = 360
-	category = FuelTank
+	category = Freight
 	subcategory = 0
 	title = K&K Kolonization Small Container
 	manufacturer = USI-K&K Joint Freight Division
@@ -43,23 +41,23 @@ PART
 	MODULE
 	{
 		name = FStextureSwitch2
-		textureNames = PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small
+		textureNames = PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small;PlanetaryBaseInc/Parts/Mod_Support/LifeSupport/Container_USILS_small
 		objectNames = Pack_002 //CHANGE THIS???
-		textureDisplayNames = LifeSupport;RawMaterials;RefinedGoods;Equipment;NuclearFuels;Commodities
+		textureDisplayNames = LifeSupport;RawMaterials;RefinedGoods;Equipment;NuclearFuels;Commodities;RawMaterials2
 		useFuelSwitchModule = true
-		fuelTankSetups = 0;1;2;3;4;5
+		fuelTankSetups = 0;1;2;3;4;5;6
 		repaintableEVA = true
 	}
 
 	MODULE
 	{
 		name = FSfuelSwitch
-		resourceNames = Supplies,Mulch,Fertilizer;MetallicOre,Substrate,Minerals,Water;Chemicals,Metals,Polymers;Machinery,Recyclables,MaterialKits,SpecializedParts;Uraninite,EnrichedUranium,DepletedFuel;RareMetals,ExoticMinerals
-		resourceAmounts = 333,333,333;250,250,250,250;333,333,333;250,250,250,250;333,333,333;500,500
-		initialResourceAmounts = 0,0,0;0,0,0,0;0,0,0;0,0,0,0;0,0,0;0,0
-		tankCost = 7492;715;12734;14200;288278;150000
+		resourceNames = Supplies,Mulch,Fertilizer;MetallicOre,Substrate,Minerals,Water;Chemicals,Metals,Polymers;Machinery,Recyclables,MaterialKits,SpecializedParts;Uraninite,EnrichedUranium,DepletedFuel;RareMetals,ExoticMinerals;Gypsum,Dirt,Hydrates
+		resourceAmounts = 333,333,333;250,250,250,250;333,333,333;250,250,250,250;333,333,333;500,500;333,333,333
+		initialResourceAmounts = 0,0,0;0,0,0,0;0,0,0;0,0,0,0;0,0,0;0,0;0,0,0
+		tankCost = 7492;715;12734;14200;288278;150000;270
 		basePartMass = 0.12
-		tankMass = 0;0;0;0;0;0
+		tankMass = 0;0;0;0;0;0;0
 		hasGUI = false
 	}
 
@@ -75,6 +73,6 @@ PART
 
 @PART[UKS_KPBS_Storage_Small]:NEEDS[CommunityTechTree]:FINAL
 {
- 	@TechRequired = shortTermHabitation
+ 	@TechRequired = storageTech
 
 }
