--- a/UKS-KPBS_CommandModule.cfg
+++ b/UKS-KPBS_CommandModule.cfg
@@ -1,242 +1,19 @@
-//add PDU functions to the command module
-//LB 1-23-16
-
-@PART[KKAOSS_Control_g]:NEEDS[KolonyTools]
+@PART[KKAOSS_Control_g]:NEEDS[KolonyTools]:FINAL
 {
 	MODULE
 	{
-		name = USI_ModuleFieldRepair
-		PullResourceList = Machinery,DepletedFuel
-		PushResourceList = Recyclables
-	}
-	RESOURCE
-	{
-		name = Machinery
-		amount = 200
-		maxAmount = 2000
-		isTweakable = True
-	}
-	RESOURCE
-	{
-		name = Recyclables
-		amount = 0
-		maxAmount = 2000
-		isTweakable = True
+		name = ModulePowerDistributor
+		PowerDistributionRange = 2000
 	}	
 
-	@RESOURCE[ElectricCharge]
-	{
-		@amount = 15000
-		@maxAmount = 15000
-	}
-	RESOURCE
-	{
-		name = EnrichedUranium
-		amount = 0
-		maxAmount = 500
-		isTweakable = True
-	}
-	
-	RESOURCE
-	{
-		name = DepletedFuel
-		amount = 0
-		maxAmount = 500
-		isTweakable = True
-	}
-	MODULE
-	{
-		name = ModulePowerDistributor
-		PowerDistributionRange = 15000
-	}	
 	MODULE
 	{
 		name = ModulePowerCoupler
 		PowerCouplingRange = 500
 	}
-	MODULE
-	{
-		name = ModuleLogisticsConsumer
-	}
-	MODULE
-	{
-		name = MKSModule
-		workSpace = 1
-		livingSpace = 0
-	}
 
 	MODULE
 	{
-		name = ExWorkshop
-		ProductivityFactor  = 1
+		name = ModuleResourceDistributor
 	}
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Centrifuge
-		StartActionName = Start Centrifuge
-		StopActionName = Stop Centrifuge
-		
-		INPUT_RESOURCE
-		{
-			ResourceName = Uraninite
-			Ratio = 0.00085
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 6
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.000001
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = EnrichedUranium
-			Ratio = 0.00085
-			DumpExcess = False
-			FlowMode = STAGE_PRIORITY_FLOW			
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.000001
-			DumpExcess = true
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 2000
-		}		
-	}
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Breeder
-		StartActionName = Start Breeder
-		StopActionName = Stop Breeder
-		
-		INPUT_RESOURCE
-		{
-			ResourceName = DepletedFuel
-			Ratio = 0.00085
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 18
-		}
-		INPUT_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 0.000001
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = EnrichedUranium
-			Ratio = 0.000425
-			DumpExcess = False
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Recyclables
-			Ratio = 0.000001
-			DumpExcess = true
-		}
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Machinery
-			Ratio = 2000
-		}		
-	}
-
-	MODULE
-	{
-		name = ModuleOverheatDisplay
-	}
-	
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Reactor
-		StartActionName = Start Reactor
-		StopActionName = Stop Reactor
-		INPUT_RESOURCE
-		{
-			ResourceName = EnrichedUranium
-			Ratio = 0.00000012
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = DepletedFuel
-			Ratio = 0.00000018
-			DumpExcess = true		
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = XenonGas
-			Ratio = 0.00000004
-			DumpExcess = true		
-		}
-		OUTPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 30
-			DumpExcess = false		
-		}
-		
-		AutoShutdown = true
-		TemperatureModifier
-		{
-			key = 0 1000000
-			key = 750 100000
-			key = 1000 10000
-			key = 1250 5000	
-			key = 2000 100	
-			key = 4000 0
-		}				
-		GeneratesHeat = true
-		DefaultShutoffTemp = .8
-		ThermalEfficiency 
-		{
-			key = 0 0 0 0
-			key = 500 0.1 0 0
-			key = 1000 1.0 0 0
-			key = 1250 0.1 0 0
-			key = 3000 0 0 0 
-		}		
-	}	
-
-	MODULE
-	{
-		name = ModuleCoreHeat
-		CoreTempGoal = 1000					//Internal temp goal - we don't transfer till we hit this point
-		CoreToPartRatio = 0.1				//Scale back cooling if the part is this % of core temp
-		CoreTempGoalAdjustment = 0			//Dynamic goal adjustment
-		CoreEnergyMultiplier = 0.1			//What percentage of our core energy do we transfer to the part
-		HeatRadiantMultiplier = 0.05		//If the core is hotter, how much heat radiates?
-		CoolingRadiantMultiplier = 0		//If the core is colder, how much radiates?
-		HeatTransferMultiplier = 0			//If the part is hotter, how much heat transfers in?
-		CoolantTransferMultiplier = 0.01	//If the part is colder, how much of our energy can we transfer?
-		radiatorCoolingFactor = 1			//How much energy we pull from core with an active radiator?  >= 1
-		radiatorHeatingFactor = 0.01		//How much energy we push to the active radiator
-		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
-		CoreShutdownTemp = 4000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 200					//Maximum amount of radiator capacity we can consume - 50 = 1 small
-	}
-        MODULE
-        {
-                 name = USI_ModuleResourceWarehouse
-        }
-		MODULE
-        {
-                 name = USI_ModuleRecycleBin
-        }
 }
