--- a/UKS-KPBS_StorageLarge.cfg
+++ b/UKS-KPBS_StorageLarge.cfg
@@ -21,7 +21,7 @@ PART
 	entryCost = 5200
 
 	cost = 720
-	category = Freight
+	category = FuelTank
 	subcategory = 0
 	title = K&K Kolonization Large Container
 	manufacturer = USI-K&K Joint Freight Division
