--- a/UKS-KPBS_StorageSmall.cfg
+++ b/UKS-KPBS_StorageSmall.cfg
@@ -21,7 +21,7 @@ PART
 	entryCost = 5200
 
 	cost = 360
-	category = Freight
+	category = FuelTank
 	subcategory = 0
 	title = K&K Kolonization Small Container
 	manufacturer = USI-K&K Joint Freight Division
