Fixed issues with duplicate modules

--- a/UKS-KPBS_Cupola.cfg
+++ b/UKS-KPBS_Cupola.cfg
@@ -1,28 +1,21 @@
-PART[KKAOSS_Cupola_g]:NEEDS[USILifeSupport]:FINAL
+@PART[KKAOSS_Cupola_g]:NEEDS[USILifeSupport]
 {
-	MODULE
+	%MODULE[ModuleLifeSupport] { }
+
+	%RESOURCE[ReplacementParts]
 	{
-		name = ModuleLifeSupport
-	}
-	
-	RESOURCE
-	{
-		name = ReplacementParts
-		amount = 100 //100 * crew capacity + 100 * Kerbal-Months
-		maxAmount = 100
-	}
-	
-	MODULE
-	{
-		name = ModuleHabitation
-		KerbalMonths = 0 //mass * 5
-		HabMultiplier = 1.75 //equal to mass; mutually exclusive
+		%amount = 100 //100 * crew capacity + 100 * Kerbal-Months
+		%maxAmount = 100
 	}
 
 	MODULE
 	{
-		name = USI_ModuleFieldRepair
+		name = ModuleHabitation
+		KerbalMonths = 0
+		HabMultiplier = 1.75 //equal to mass
 	}
+
+	%MODULE[USI_ModuleFieldRepair] { }
 
 	MODULE
 	{
