--- a/UKS-KPBS_HabitatMk1.cfg
+++ b/UKS-KPBS_HabitatMk1.cfg
@@ -1,15 +1,11 @@
 @PART[KKAOSS_Habitat_MK1_g]:NEEDS[USILifeSupport]
 {
-	MODULE
+	%MODULE[ModuleLifeSupport] { }
+
+	%RESOURCE[ReplacementParts]
 	{
-		name = ModuleLifeSupport
-	}
-	
-	RESOURCE
-	{
-		name = ReplacementParts
-		amount = 1150 //100 * crew capacity + 100 * Kerbal-Months
-		maxAmount = 1150
+		%amount = 1150 //100 * crew capacity + 100 * Kerbal-Months
+		%maxAmount = 1150
 	}
 
 	MODULE
@@ -17,12 +13,12 @@
 		name = ModuleHabitation
 		KerbalMonths = 8.5 //mass * 5
 	}
-	
+
 	MODULE
 	{
 		name = ModuleLifeSupportRecycler
 		CrewCapacity = 5
-		RecyclePercent = .33
+		RecyclePercent = .34
 		ConverterName = Life Support
 		tag = Life Support
 		StartActionName = Start Life Support
@@ -33,17 +29,9 @@
 			ResourceName = ElectricCharge
 			Ratio = 1 //.2 * crew capacity
 		}
-		//INPUT_RESOURCE
-		//{
-		//	ResourceName = ReplacementParts
-		//	Ratio = 0.00001 //.000002 * crew capacity
-		//}	
 	}
 
-	MODULE
-	{
-		name = USI_ModuleFieldRepair
-	}
+	%MODULE[USI_ModuleFieldRepair] { }
 
 	MODULE
 	{
