--- a/UKS-KPBS_HabitatMk2.cfg
+++ b/UKS-KPBS_HabitatMk2.cfg
@@ -1,15 +1,11 @@
 @PART[KKAOSS_Habitat_MK2_g]:NEEDS[USILifeSupport]
 {
-	MODULE
+	%MODULE[ModuleLifeSupport] { }
+
+	%RESOURCE[ReplacementParts]
 	{
-		name = ModuleLifeSupport
-	}
-	
-	RESOURCE
-	{
-		name = ReplacementParts
-		amount = 1700 //100 * crew capacity + 100 * Kerbal-Months
-		maxAmount = 1700
+		%amount = 1700 //100 * crew capacity + 100 * Kerbal-Months
+		%maxAmount = 1700
 	}
 
 	MODULE
@@ -17,7 +13,7 @@
 		name = ModuleHabitation
 		KerbalMonths = 13 //mass * 5
 	}
-	
+
 	MODULE
 	{
 		name = ModuleLifeSupportRecycler
@@ -37,13 +33,10 @@
 		{
 			ResourceName = Water
 			Ratio = 0.005
-		}		
+		}
 	}
 
-	MODULE
-	{
-		name = USI_ModuleFieldRepair
-	}
+	%MODULE[USI_ModuleFieldRepair] { }
 
 	MODULE
 	{
