--- a/UKS-KPBS_ScienceLab.cfg
+++ b/UKS-KPBS_ScienceLab.cfg
@@ -1,17 +1,13 @@
 @PART[KKAOSS_Science_g]:NEEDS[USILifeSupport]:FINAL
 {
-	MODULE
+	%MODULE[ModuleLifeSupport] { }
+
+	%RESOURCE[ReplacementParts]
 	{
-		name = ModuleLifeSupport
+		%amount = 200 //100 * crew capacity + 100 * Kerbal-Months
+		%maxAmount = 200
 	}
-	
-	RESOURCE
-	{
-		name = ReplacementParts
-		amount = 200 //100 * crew capacity + 100 * Kerbal-Months
-		maxAmount = 200
-	}
-	
+
 	MODULE
 	{
 		name = ModuleLifeSupportRecycler
@@ -27,17 +23,9 @@
 			ResourceName = ElectricCharge
 			Ratio = 1 //.2 * crew capacity
 		}
-		//INPUT_RESOURCE
-		//{
-		//	ResourceName = ReplacementParts
-		//	Ratio = 0.00001 //.000002 * crew capacity
-		//}	
 	}
 
-	MODULE
-	{
-		name = USI_ModuleFieldRepair
-	}
+	%MODULE[USI_ModuleFieldRepair] { }
 
 	MODULE
 	{
