fix duplicate converter entries

--- a/UKS-KPBS_HabitatMk2.cfg
+++ b/UKS-KPBS_HabitatMk2.cfg
@@ -1,4 +1,4 @@
-@PART[KKAOSS_Habitat_MK2_g]:NEEDS[USILifeSupport]
+@PART[KKAOSS_Habitat_MK2_g]:NEEDS[USILifeSupport]:AFTER[USILifeSupport]
 {
 	%MODULE[ModuleLifeSupport] { }
 
@@ -8,12 +8,14 @@
 		%maxAmount = 1700
 	}
 
+	-MODULE[ModuleHabitation] { }
 	MODULE
 	{
 		name = ModuleHabitation
 		KerbalMonths = 13 //mass * 5
 	}
-
+	
+	-MODULE[ModuleLifeSupportRecycler] { }
 	MODULE
 	{
 		name = ModuleLifeSupportRecycler
