--- a/UKS-KPBS_HabitatMk1.cfg
+++ b/UKS-KPBS_HabitatMk1.cfg
@@ -1,4 +1,4 @@
-@PART[KKAOSS_Habitat_MK1_g]:NEEDS[USILifeSupport]
+@PART[KKAOSS_Habitat_MK1_g]:NEEDS[USILifeSupport]:AFTER[USILifeSupport]
 {
 	%MODULE[ModuleLifeSupport] { }
 
@@ -8,12 +8,14 @@
 		%maxAmount = 1150
 	}
 
+	-MODULE[ModuleHabitation] { }
 	MODULE
 	{
 		name = ModuleHabitation
 		KerbalMonths = 8.5 //mass * 5
 	}
 
+	-MODULE[ModuleLifeSupportRecycler] { }
 	MODULE
 	{
 		name = ModuleLifeSupportRecycler
